# zephyr

./: .gitattributes  .gitignore  Cargo.toml  grammar.md  makefile  readme.md  test.sh  tests.py  types.md
book/: book.toml
derive/: Cargo.toml
doc/: chapter_1.html  index.html  print.html
docs/: chapter_1.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
examples/: hello.zph  pow.zph
fork/: hello.frk
new_zephyr/: Cargo.toml
snapshots/: .gitignore  a.wasm  colon_syntax.zph  equal_typing_rules.zph  escape_char.zph  fun_defined_twice.zph  if_no_arg.zph  incomplete_struct_field.zph  let_equal.zph  missing_fields.zph  missing_runtime_keyword.zph  missing_runtime_name.zph  multiple_imports.zph  multiple_imports.zph.wasm  multiple_runtimes.zph.wasm  non_tuple.zph  not_defined.zph  not_defined_fun.zph  not_enough_args.zph  readme.md  struct_in_if.zph  too_many_args.zph  too_many_fields.zph  tuple_size.zph  unauthorized_import.zph  unnecessary_pub_in_impl.zph  wrong_top_level.zph
src/: arena.rs  cli.rs  compile.rs  driver.rs  encode.rs  error.rs  lib.rs  main.rs  name.rs  opcode.rs  parse.rs  scan.rs  wasm.rs
test/: a.wasm  add.frk  asm.zasm  base_16.zph  base_2.zph  call.frk  call.zph  else.frk  else.zph  expose.frk  expose.zph  float.frk  float.zph  identifiers.frk  identifiers.zph  if.frk  if.zph  import.zph  integration_exp.frk  integration_fact.frk  let.frk  let.zph  logical_and.zph  memory.zasm  module.zph  package.frk  package.zph  (+12 more)
zephyrc/: Cargo.toml
zephyrc/src/: error_handler.rs  errors.rs  main.rs  resolver.rs
(+212 files in other folders)
