[package]
name = "zephyr-lang"
version = "0.1.0"
authors = ["CharlyCst <charly.castes@epfl.ch>"]
edition = "2018"

[lib]
name = "zephyr"

[[bin]]
name = "zephyr"
path = "src/bin/main.rs"

[dependencies]
zephyr-lang-derive = { path ="./derive" }

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = [ "suggestions", "derive", "std" ]
